fix correção widht

--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,7 @@ ul li i ::after {
 
 .container-purpose {
     height: 70vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
